src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <label>Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <inlineHelpText>Type in the name of Agency. If you deal directly with the Brand type in Brand Direct</inlineHelpText>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alexa_Global_Rank_Cb__c</fullName>
        <label>Alexa Global Rank_Cb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alexa_US_Rank_Cb__c</fullName>
        <label>Alexa US Rank_Cb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Raised_Cb__c</fullName>
        <label>Amount Raised_Cb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractsClientSpend__c</fullName>
        <label>Contracts Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractsGrossProfit__c</fullName>
        <label>Contracts Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Xero_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Xero Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultPaymentType__c</fullName>
        <label>Default Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Addresses_Cb__c</fullName>
        <label>Email Addresses_Cb</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Range_Cb__c</fullName>
        <label>Employee Range_Cb</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-250</fullName>
                </value>
                <value>
                    <fullName>251-1K</fullName>
                </value>
                <value>
                    <fullName>1K-5K</fullName>
                </value>
                <value>
                    <fullName>5K-10K</fullName>
                </value>
                <value>
                    <fullName>10K-50K</fullName>
                </value>
                <value>
                    <fullName>50K-100K</fullName>
                </value>
                <value>
                    <fullName>100K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Revenue_Cb__c</fullName>
        <label>Estimated Annual Revenue_Cb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceLayout__c</fullName>
        <label>Invoice Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Item</fullName>
                    <default>true</default>
                    <label>Single Item</label>
                </value>
                <value>
                    <fullName>Media/Strike Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoicingDelay__c</fullName>
        <label>Invoicing Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that describes if a contact has any AR invoices entered against them. Read only – it is automatically set when an accounts receivable invoice is generated against this contact.</description>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that describes if a contact that has any AP invoices entered against them. Read only -  it is automatically set when an accounts payable invoice is generated against this contact.</description>
        <label>Is Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Natural_Name__c</fullName>
        <label>Natural Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts_with_Activities__c</fullName>
        <label>No of Contacts with Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts_with_no_Activity__c</fullName>
        <label>No of Contacts with no Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contracts__c</fullName>
        <label>Number of Contracts</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Meeting, Proposal/Price Quote, SOW</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outreach_Tags__c</fullName>
        <label>Outreach Tags</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_s_Email__c</fullName>
        <label>Previous Owner&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Similar_Clients__c</fullName>
        <label>Similar Clients</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote Sent</fullName>
                </value>
                <value>
                    <fullName>Active Client</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Marketing/Recycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry_Cb__c</fullName>
        <label>Sub Industry_Cb</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Agricultural Products</fullName>
                </value>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Apparel, Accessories &amp; Luxury Goods</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Asset Management &amp; Custody Banks</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking &amp; Mortgages</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Business Supplies</fullName>
                </value>
                <value>
                    <fullName>Capital Goods</fullName>
                </value>
                <value>
                    <fullName>Casinos &amp; Gaming</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Cloud Services</fullName>
                </value>
                <value>
                    <fullName>Commercial Printing</fullName>
                </value>
                <value>
                    <fullName>Commodity Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Networking</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Discretionary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags_Cb__c</fullName>
        <label>Tags_Cb</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Techlonogy_Cb__c</fullName>
        <label>Techlonogy_Cb</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XeroObject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Xero Object</label>
        <referenceTo>XeroEntity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <formula>if(!isblank(Xero_Id__c), 
HYPERLINK(&quot;https://go.xero.com/Contacts/View/&quot;&amp;Xero_Id__c, 
          if(!isblank(XeroObject__c), XeroObject__r.XeroName__c ,&quot;View&quot;)),
&quot;Not Synced with Xero&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Id__c</fullName>
        <description>Store Contact Id from Xero</description>
        <externalId>true</externalId>
        <label>Xero Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Stage__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>Active Clients</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Agency_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ContractsGrossProfit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Agency</value>
        </filters>
        <filters>
            <field>ContractsClientSpend__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Agency Clients</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Brand_Direct_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ContractsGrossProfit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Brand_Direct</value>
        </filters>
        <filters>
            <field>ContractsClientSpend__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Brand Direct Clients</label>
    </listViews>
    <listViews>
        <fullName>Cam_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cwallin</value>
        </filters>
        <label>Cam&apos;s Accounts</label>
    </listViews>
    <listViews>
        <fullName>Dan_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>dholl</value>
        </filters>
        <label>Dan&apos;s Accounts</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ContractsClientSpend__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Nic_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>castro</value>
        </filters>
        <label>Nic&apos;s Accounts</label>
        <sharedTo>
            <group>All_Salesforce_users</group>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Direct</fullName>
        <active>true</active>
        <label>Brand Direct</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillingCityStateORcountryRequired</fullName>
        <active>false</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp; 
(ISBLANK(BillingCity) ||
ISBLANK(BillingState)) &amp;&amp; ISBLANK(BillingCountry)</errorConditionFormula>
        <errorMessage>Fill in Billing City and Billing State OR Billing Country if outside of US</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>